<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:translationY="-10dp"
        android:visibility="gone"
        app:cardBackgroundColor="#C8C8C8"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <LinearLayout
            android:id="@+id/vert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textColorLink="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/border2"
                android:layout_width="190dp"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="2dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/description_itself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/description"
                android:textColor="@color/black"
                android:textColorLink="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/border3"
                android:layout_width="190dp"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="2dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/time_itself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/time"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/border4"
                android:layout_width="190dp"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="2dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/points_itself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/points"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#DCDCDC"
        app:cardCornerRadius="10dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/typeImg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/hero" />

                    <TextView
                        android:id="@+id/typeNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:height="20dp"
                        android:text="TextView" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/border"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/nameNote"
                    android:layout_width="190dp"
                    android:layout_height="70dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/note"
                    android:maxLines="2"
                    android:textColor="#000000"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="#00FBFBFB"
                android:onClick="beforeDeleteNote"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/delete" />

            <ImageButton
                android:id="@+id/edit"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="#00FBFAFA"
                android:onClick="editNote"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/edit" />

            <ImageButton
                android:id="@+id/expand"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="#00F0CBAF"
                android:onClick="expandNote"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/roll_reverse" />

            <TextView
                android:id="@+id/tipoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>